--- a/provisioningRessources-With-AzureML-SDK/config.json
+++ b/provisioningRessources-With-AzureML-SDK/config.json
@@ -1,5 +1,5 @@
 {
-    "subscription_id": "f0aab5c4-5117-4406-8a16-8d58d23c78fa",
-    "resource_group": "PFA-rg",
-    "workspace_name":"PFA-workspace"
+    "subscription_id": "",
+    "resource_group": "",
+    "workspace_name":""
 }
